cleaned up the master notebooks and put all the functions in a helper file

--- a/LAM mCherry rev_50per_targeting.ipynb
+++ b/LAM mCherry rev_50per_targeting.ipynb
@@ -21,21 +21,21 @@
     "\n",
     "#### of all 4 file types - If you do it multiple times it just appends text lines to bottom of text editor\n",
     "#(terminal)\n",
-    "#    $head -n2000 N706_N505_R1.fastq >> ./10000Reads/N706_N505_R1.fastq \n",
-    "#    $head -n2000 N706_N505_R2.fastq >> ./10000Reads/N706_N505_R2.fastq\n",
+    "#    $head -n2000 N708_N505_R1.fastq >> ./10000Reads/N708_N505_R1.fastq \n",
+    "#    $head -n2000 N708_N505_R2.fastq >> ./10000Reads/N708_N505_R2.fastq\n",
     "\n",
     "\n",
     "#### check how many lines: (terminal)\n",
-    "#    $wc -l N706_N505_R1.fastq\n",
+    "#    $wc -l N708_N505_R1.fastq\n",
     "\n",
     "### can compress with gZip\n",
-    "#    $gzip N706_N505_R1.fastq\n",
-    "#    $gzip N706_N505_R2.fastq"
+    "#    $gzip N708_N505_R1.fastq\n",
+    "#    $gzip N708_N505_R2.fastq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,31 +116,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed\n"
+      "/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads\n"
      ]
     }
    ],
    "source": [
     "#Directory\n",
     "\n",
-    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads'\n",
+    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed/10000Reads'\n",
     "\n",
     "#this is a minimal directory of only 300 files for quick debugging\n",
-    "directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed'\n",
+    "#directory = '/media/edanner/NewUbuntuSpace/Workspace/LinearAmp/Sequence2_191129_MN00157_0047_A000H2GWGF/Mishas_Demultiplexed'\n",
     "\n",
     "print(directory)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -163,28 +163,28 @@
      "data": {
       "text/plain": [
        "NGS_req-ID                                                                     A000H2GWGF\n",
-       "name                                                                        LAM_Pol50_pbR\n",
+       "name                                                                   LAM_Pol50_mCherRev\n",
        "Sample                                                                               Polb\n",
-       "description                                               MiniSeq_K562_Polb_Rev_50per_LAM\n",
+       "description                                         MiniSeq_K562_Polb_mCherrRev_50per_LAM\n",
        "Control sample (Y/N)                                                                    N\n",
        "Notes                                                                                 NaN\n",
        "Dilution                                                                              NaN\n",
        "Cell name_type                                                                       K562\n",
        "UMI_Len                                                                        NNNNNNNNNN\n",
        "IndexI7Primer                                                                         NaN\n",
-       "I7_Index_ID                                                          P7_N706_SBS12nextera\n",
-       "index_I1                                                                             N706\n",
-       "barcode_I1                                                                       TAGGCATG\n",
+       "I7_Index_ID                                                          P7_N708_SBS12nextera\n",
+       "index_I1                                                                             N708\n",
+       "barcode_I1                                                                       CAGAGAGG\n",
        "I5_Index_ID                                                             P5_UMI_N505_Tn5-A\n",
        "index_I2                                                                             N505\n",
        "barcode_I2                                                                       CTCCTTAC\n",
        "primer_outfwd                                                                         NaN\n",
-       "primer                                                                U1-C-PolB_Rev_nest1\n",
+       "primer                                                             U1-C-mCherry_Rev_nest1\n",
        "genome                                                                               hg38\n",
        "chr                                                                                  chr8\n",
        "start                                                                            42350359\n",
        "end                                                                              42350378\n",
-       "strand                                                                                  -\n",
+       "strand                                                                                  +\n",
        "guide_1                                                                            Polb#3\n",
        "sequence_guide_1                                                     TAATTTTGTGTGGGTCACCC\n",
        "genome_guide_1                                                                       hg38\n",
@@ -212,10 +212,10 @@
        "plamid_name                                                                         pE049\n",
        "plasmid_sequence                        ctatggaaaaacgccagcaacgcggcctttttacggttcctggcct...\n",
        "genomic_background                                                                    NaN\n",
-       "Name: 1, dtype: object"
+       "Name: 3, dtype: object"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,14 +223,14 @@
    "source": [
     "#the amplicon info is related to the line on the csv file. It is indexed from 0. For PolbF we use 0.\n",
     "\n",
-    "#0 is because this mCherry Rev 50per targeting\n",
-    "amplicon_info = get_csv_data(directory, 4)\n",
+    "#3 is because this mCherry Rev 50per targeting\n",
+    "amplicon_info = get_csv_data(directory, 3)\n",
     "amplicon_info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,28 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "adapter_seq = 'GACTATAGGGCACGCGTGG'\n",
-    "len(adapter_seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,15 +617,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of reads: 455257\n",
-      "number of unique umis 353635\n"
+      "number of reads: 500\n",
+      "number of unique umis 499\n"
      ]
     }
    ],
@@ -667,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,15 +776,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reads_in_experiment_list_count 434391\n",
-      "reads_not_in_experiment_list_count 20866\n"
+      "reads_in_experiment_list_count 480\n",
+      "reads_not_in_experiment_list_count 20\n"
      ]
     }
    ],
@@ -815,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -891,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +992,7 @@
        "'replace'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,10 +1351,13 @@
     "    N7 = amplicon_info['index_I1']\n",
     "    N5 = amplicon_info['index_I2']\n",
     "    # exp_dir = create_filename(dir_sample, N7, N5, 'mainfolder')\n",
-    "\n",
+    "    #does the alignment local but the problem is that there is a 2A sequence in both\n",
+    "    \n",
+    "    #input\n",
     "    file_cutadapt_R1 = create_filename(dir_sample, N7, N5, 'R1trimmed')\n",
     "    file_cutadapt_R2 = create_filename(dir_sample, N7, N5, 'R2trimmed')\n",
-    "\n",
+    "    \n",
+    "    #output\n",
     "    file_sam_plasmid_local = create_filename(dir_sample, N7, N5, 'sam_plasmid_local')\n",
     "    file_sam_report_plasmid_local = create_filename(dir_sample, N7, N5, 'sam_report_plasmid_local')\n",
     "\n",
@@ -1377,7 +1366,7 @@
     "\n",
     "    file_bam_plasmid_local = create_filename(dir_sample, N7, N5, 'bam_plasmid_local')\n",
     "    file_sorted_bam_plasmid_local = create_filename(dir_sample, N7, N5, 'sorted_bam_plasmid_local')\n",
-    "    # file_sorted_bai_genome_local = create_filename(dir_sample, N7, N5, 'sorted_bai_genome_local')\n",
+    "    file_sorted_bai_genome_local = create_filename(dir_sample, N7, N5, 'sorted_bai_genome_local')\n",
     "\n",
     "    if not os.path.exists(os.path.dirname(file_bam_plasmid_local)):\n",
     "        os.mkdir(os.path.dirname(file_bam_plasmid_local))\n",
@@ -1417,7 +1406,7 @@
     "    subprocess.call(create_bam_plasmid_local_index_command)\n",
     "\n",
     "    # Clean up\n",
-    "    os.remove(file_sam_plasmid_local)\n",
+    "    #os.remove(file_sam_plasmid_local)\n",
     "    os.remove(file_bam_plasmid_local)\n",
     "\n",
     "    os.chdir(initial_dir)\n",
@@ -1466,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1486,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1632,8 +1621,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>24037</td>\n",
-       "      <td>23676</td>\n",
+       "      <td>172</td>\n",
+       "      <td>172</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1644,10 +1633,10 @@
        "0                                0                                          0   \n",
        "\n",
        "   plasmid_only_total_reads  plasmid_only_total_reads_collapsed  \n",
-       "0                     24037                               23676  "
+       "0                       172                                 172  "
       ]
      },
-     "execution_count": 127,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
