--- a/PolbFwd_Uditas_Analysis.ipynb
+++ b/PolbFwd_Uditas_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,12 +86,14 @@
     "#this will only be avialable for read2\n",
     "\n",
     "#polb fwd #capital letters!\n",
-    "primer_seq_plus_downstream ='TGGTTTTATTTCACCCCATGATAGTAATTATATCACT'"
+    "primer_seq_plus_downstream ='TGGTTTTATTTCACCCCATGATAGTAATTATATCACT'\n",
+    "\n",
+    "seq_primer_to_breaksite = 'TGGTTTTATTTCACCCCATGATAGTAATTATATCACTTCTGATCTGTTAAGAATAGACCTTTTAAAAGTATTGGATAACTTAGAGATGAGACATCTTCAGTTACTCTGTTATTCACCTATTACTCCTTAGGTTACTTGTGAATAATTTTGTGTGGGTCA'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -123,21 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to make the 'amplicon_info' list. Taking the line of our experiment csv file\n",
-    "\n",
-    "def get_csv_data(dir_sample, line_of_data_from_csv):\n",
-    "    sample_info_filename = os.path.join(dir_sample, 'sample_info.csv')\n",
-    "    experiments = pd.read_csv(sample_info_filename)\n",
-    "    return experiments.loc[line_of_data_from_csv]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -196,12 +184,19 @@
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Function to make the 'amplicon_info' list. Taking the line of our experiment csv file\n",
+    "\n",
+    "def get_csv_data(dir_sample, line_of_data_from_csv):\n",
+    "    sample_info_filename = os.path.join(dir_sample, 'sample_info.csv')\n",
+    "    experiments = pd.read_csv(sample_info_filename)\n",
+    "    return experiments.loc[line_of_data_from_csv]\n",
+    "\n",
     "#the amplicon info is related to the line on the csv file. It is indexed from 0. For PolbF we use 0.\n",
     "#it is on my extera space so need to make sure that is mounted. (first thing to check if it throws and error)\n",
     "\n",
@@ -219,14 +214,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38.2bit\n"
+      "/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes/hg38.2bit\n",
+      "env: BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n"
      ]
     }
    ],
@@ -234,37 +230,15 @@
     "# Assign the file_genome_2bit location. This is needed for pulling sequence from the referene genome by location\n",
     "assembly = amplicon_info['genome']\n",
     "file_genome_2bit = os.path.join('/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes', assembly + '.2bit')\n",
-    "print(file_genome_2bit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n"
-     ]
-    }
-   ],
-   "source": [
+    "print(file_genome_2bit)\n",
+    "\n",
     "# BOWTIE2_INDEXES are needed for global alignments\n",
     "#not sure if this will work\n",
     "#normally in bash: export BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n",
     "#check in bash: > ECHO $GENOMES_2BIT\n",
     "\n",
-    "%env BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "%env BOWTIE2_INDEXES=/media/edanner/NewUbuntuSpace/Workspace/Ref_Genomes\n",
+    "\n",
     "#check the env variables\n",
     "#%env"
    ]
@@ -278,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,19 +335,12 @@
     "\n",
     "    return umi_dict\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "\n",
     "################################################################################\n",
     "# create list of output files\n",
     "#I added a bit to allow for the function that makes a fastq of the correctly primed targets\n",
+    "#I  need to add to make  mishas umi file\n",
     "################################################################################\n",
     "def create_filename(dir_sample, N7, N5, filetype):\n",
     "    main_folder = os.path.join(dir_sample, N7 + '_' + N5)\n",
@@ -390,6 +357,16 @@
     "    elif filetype == 'R2fastqgz':\n",
     "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R2.fastq.gz')\n",
     "   \n",
+    "    ### Added to make LAM cleanup after extracting UMI and cleaving adapter\n",
+    "    elif filetype == 'R1fastq_LAM':\n",
+    "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R1.LAM.fastq')\n",
+    "    elif filetype == 'R1fastqgz_LAM':\n",
+    "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R1.LAM.fastq.gz')\n",
+    "    elif filetype == 'R2fastq_LAM':\n",
+    "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R2.LAM.fastq')\n",
+    "    elif filetype == 'R2fastqgz_LAM':\n",
+    "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R2.LAM.fastq.gz')\n",
+    "    \n",
     "    #### I added these as the sequences that were correctly primed\n",
     "    elif filetype == 'R1fastq_CorrPrime':\n",
     "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_R1.CorrPrime.fastq')\n",
@@ -405,6 +382,15 @@
     "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_umi.fastq')\n",
     "    elif filetype == 'umifastqgz':\n",
     "        return os.path.join(main_folder, 'fastq_files', N7 + '_' + N5 + '_umi.fastq.gz')\n",
+    "    \n",
+    "    ### Added these for trimming to breaksite\n",
+    "    elif filetype == 'R1trimmed2break':\n",
+    "        return os.path.join(main_folder, 'cutadapt_files_to_breaksite', N7 + '_' + N5 + '_R1.trimmed2break.fastq.gz')\n",
+    "    elif filetype == 'R2trimmed2break':\n",
+    "        return os.path.join(main_folder, 'cutadapt_files_to_breaksite', N7 + '_' + N5 + '_R2.trimmed2break.fastq.gz')\n",
+    "    elif filetype == 'trimmed_report2break':\n",
+    "        return os.path.join(main_folder, 'cutadapt_files_to_breaksite', N7 + '_' + N5 + '.trimmed.report.txt')\n",
+    "    ###############################################\n",
     "    elif filetype == 'R1trimmed':\n",
     "        return os.path.join(main_folder, 'cutadapt_files', N7 + '_' + N5 + '_R1.trimmed.fastq.gz')\n",
     "    elif filetype == 'R2trimmed':\n",
@@ -506,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +991,7 @@
     "    #added this modification from Uditas for replace\n",
     "    elif reaction_type == 'replace':\n",
     "        if amplicon_info['strand_guide_1'] == '+':\n",
-    "            # sp or sa for the moment only\n",
+    "            # sp or sa for the moment only2b\n",
     "            cut1 = amplicon_info['end_guide_1'] - 3\n",
     "        elif amplicon_info['strand_guide_1'] == '-':\n",
     "            cut1 = amplicon_info['start_guide_1'] + 3\n",
@@ -1198,10 +1184,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "####make sure there is no redundant sequences between your targeting vector and the delivery plasmid####\n",
+    "\n",
     "def align_plasmid_local(dir_sample, amplicon_info, ncpu=4):\n",
     "\n",
     "    # We first check if the experiment had any guides\n",
@@ -1329,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1585,7 +1573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1662,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1923,15 +1911,8 @@
     "            total_collapsed_reads_in_region,\n",
     "            total_collapsed_indels,\n",
     "            total_collapsed_deletions,\n",
-    "            total_collapsed_insertions]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            total_collapsed_insertions]\n",
+    "\n",
     "# Functions from Uditas to analyze the alignments. These support analyze_alignment()\n",
     "\n",
     "# create_segments() is used in analyze_fragment_sizes(). Analyze_fragment_sizes is used in analyze_alignments()\n",
@@ -2024,12 +2005,13 @@
     "    bam_in.close()\n",
     "\n",
     "    return median_size\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,15 +2141,9 @@
     "    else:\n",
     "        raise ReactionTypeError('Reaction type not yet supported by current version of UDiTaS')\n",
     "\n",
-    "    return cut_in_reference_amplicon_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return cut_in_reference_amplicon_df\n",
+    "\n",
+    "\n",
     "################################################################################\n",
     "#  Function to analyze indels and structural rearrangements from aligned reads to amplicons\n",
     "################################################################################\n",
@@ -2374,7 +2350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4923,6 +4899,65 @@
     "For Tn5 setup the 'Read 1' contains the sequence away from the gene specific primer. So it is the read we should concentration on if we don't do paired end.\n",
     "\n",
     "For LAM the 'Read 2' is the the sequence distal to the gene specific primer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############################\n",
+    "#\n",
+    "# this was changed from the uditas original. It assumes I already went through the jupyternotebook of the\n",
+    "# normal uditias analysis. In short it assumes you already ran the correct_priming() function on the data\n",
+    "#\n",
+    "# This is used to trim the fastq files. Originally it was just to trim off the adapter sequences.\n",
+    "# However in this case we use it to trim off the sequences up to the break\n",
+    "\n",
+    "# for Tn5 use the reverse compliment and read2. \n",
+    "\n",
+    "# ##########################\n",
+    "def trim_fastq_to_break(dir_sample, amplicon_info, seq_primer_to_breaksite):\n",
+    "\n",
+    "    \n",
+    "    seqRC = reverse_complement(seq_primer_to_breaksite)\n",
+    "     \n",
+    "    \n",
+    "    # We first check if the experiment had any guides\n",
+    "    N7 = amplicon_info['index_I1']\n",
+    "    N5 = amplicon_info['index_I2']\n",
+    "\n",
+    "    \n",
+    "    file_R1 = create_filename(dir_sample, N7, N5, 'R1fastq_CorrPrime')\n",
+    "    file_R2 = create_filename(dir_sample, N7, N5, 'R2fastq_CorrPrime')\n",
+    "\n",
+    "    file_cutadapt_R1 = create_filename(dir_sample, N7, N5, 'R1trimmed2break')\n",
+    "    file_cutadapt_R2 = create_filename(dir_sample, N7, N5, 'Rwtrimmed2break')\n",
+    "    file_cutadapt_report = create_filename(dir_sample, N7, N5, 'trimmed_report2break')\n",
+    "        \n",
+    "    if not os.path.exists(os.path.dirname(file_cutadapt_R1)):\n",
+    "        os.mkdir(os.path.dirname(file_cutadapt_R1))\n",
+    "\n",
+    "    # remove adapters with cutadapt\n",
+    "    #original uditas peramiter had an error -e 0.33 (but was cutting of random stuff too much)\n",
+    "    cutadapt_command = ['cutadapt',\n",
+    "                        '-m', '30',\n",
+    "                        '-e', '0.20',\n",
+    "                        '-a', seqRC,\n",
+    "                        '-o', file_cutadapt_R1,\n",
+    "                        file_R1]\n",
+    "\n",
+    "    handle_cutadapt_report = open(file_cutadapt_report, 'wb')\n",
+    "    subprocess.call(cutadapt_command, stdout=handle_cutadapt_report)\n",
+    "    handle_cutadapt_report.close()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# to make it simplier I continued in another workbook called after_cut_global_end-to-end-polb fwd"
    ]
   }
  ],
